<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SunWidget</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thr">Thr</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sunrise">▲</string>
    <string name="sunset">▼</string>
    <string name="moonrise">▲</string>
    <string name="moonset">▼</string>
    <string name="compass_sunrise">Sunrise</string>
    <string name="compass_sunset">Sunset</string>
    <string name="compass_moonrise">Moonrise</string>
    <string name="compass_moonset">Moonset</string>
    <string name="nextmonth">Next</string>
    <string name="prevmonth">Previous</string>
    <string name="refrshing">Refreshing</string>
    <string name="empty_view_text">Unknown</string>
    <string name="toast_format_string">%1$s says Hi!</string>
    <string name="item_format_string">%1$d\u00B0 in %2$s</string>
    <string name="menuitem_title_location">Location</string>
    <string name="menuitem_title_bookmarks">Bookmarks</string>
    <string name="menuitem_title_calendar">Calendar</string>
    <string name="menuitem_title_rain">Rain</string>
    <string name="menuitem_title_tide">Tide</string>
    <string name="menuitem_title_compass">Compass</string>
    <string name="map_bookmark">Bookmark</string>
    <string name="map_locating">Locating</string>
	<string name="map_sunrise">Sunrise: </string>
	<string name="map_sunset">Sunset: </string>
	<string name="map_moonrise">Moonrise: </string>
	<string name="map_moonset">Moonset: </string>
	<string name="map_bookmark_address_hint">Address to Fill</string>
	<string name="map_bookmark_empty_address">Empty Address</string>
	<string name="map_no_bookmark">Empty</string>
	<string name="bookmarklist_remove">Remove</string>
	<string name="bookmarklist_edit">Edit</string>
	<string name="bookmarklist_setdefault">Default</string>
	<string name="map_datepicker_checkbox">Date</string>
	<string name="map_show_bookmarks">Bookmarks</string>
	<string name="progress_message">Loading</string>
	<string name="progress_message_connecting">Connecting</string>
	<string name="progress_message_handling">Handling</string>
	<string name="progress_message_saving">Saving</string>
	<string name="progress_message_last_update">Last Update</string>
</resources>