<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/bookmark_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bookmark_latlng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/bookmark_function_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <Button
            android:id="@+id/bookmark_setdefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/bookmarklist_setdefault"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bookmark_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/bookmarklist_edit"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/bookmark_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/bookmarklist_remove"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>